--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_popularity">Popularity</string>
+    <string name="title_release_date">Release date</string>
+    <string name="title_vote_count">Vote count</string>
 </resources>
